# minecraft-vulkan-clone

./: CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  TODO.md  build_log.txt  build_log2.txt
.claude/: settings.local.json
.github/workflows/: build.yml  linting.yml
assets/config/: blocks.toml
assets/icons/: app_icon.rc
src/: main.cpp
src/audio/: audio_manager.cpp  audio_manager.hpp  sound_buffer.cpp  sound_buffer.hpp  sound_cache.cpp  sound_cache.hpp  sound_manager.cpp  sound_manager.hpp
src/core/: frustum.cpp  frustum.hpp  types.hpp
src/core/camera/: camera.cpp  camera.hpp
src/core/logger/: logger.cpp  logger.hpp
src/core/window/: window.cpp  window.hpp
src/ecs/: ecs.hpp
src/ecs/components/: component.hpp
src/ecs/components/physics/: collider.hpp  transform.hpp  velocity.hpp
src/ecs/components/player/: player.hpp
src/ecs/systems/: system.hpp
src/ecs/systems/physics/: physics.cpp  physics.hpp
src/ecs/systems/player/: player.cpp  player.hpp
src/game/: game.cpp  game.hpp  game_settings.cpp  game_settings.hpp  game_state.hpp
src/graphics/: bindless_manager.cpp  bindless_manager.hpp  buffer.cpp  buffer.hpp  depth_buffer.cpp  depth_buffer.hpp  device.cpp  device.hpp  display.cpp  display.hpp  framebuffer.cpp  framebuffer.hpp  global.hpp  gpu_data.cpp  gpu_data.hpp  image.cpp  image.hpp  overlay_renderer.cpp  overlay_renderer.hpp  pipeline.cpp  pipeline.hpp  swapchain.cpp  swapchain.hpp  texture_cache.cpp  texture_cache.hpp
src/graphics/stb/: stb.cpp
src/graphics/utils/: init.cpp  init.hpp  utils.cpp  utils.hpp
src/graphics/vma/: vma.cpp
src/gui/: button.cpp  button.hpp  element.hpp  gui.cpp  gui.hpp  text_renderer.cpp  text_renderer.hpp
src/shaders/: chunk.frag  chunk.vert  cloud.frag  cloud.vert  display.frag  display.vert  gui.frag  gui.vert  outline.frag  outline.vert  overlay.frag  overlay.vert  shadow.vert  sky.frag  sky.vert  text.frag  text.vert
src/shaders/include/: binding.glsl
src/utils/console/: console.cpp  console.hpp
src/utils/drawer/: box_drawer.cpp  box_drawer.hpp
src/world/: block.hpp  block_registry.cpp  block_registry.hpp  chunk.cpp  chunk.hpp  chunk_mesh.cpp  chunk_mesh.hpp  clouds.cpp  clouds.hpp  outline.cpp  outline.hpp  sky.cpp  sky.hpp  world.cpp  world.hpp  world_generator.cpp  world_generator.hpp
